feat(tic-tac-toe): added DisplayController to render board and handle player moves in the DOM

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -11,7 +11,9 @@
         <header></header>
         <div class="main-container">
             <main>
-                
+                <div class="tictactoe-container">
+                    
+                </div>
             </main>
         </div>
         <div class="footer-container">
