--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -11,8 +11,18 @@
         <header></header>
         <div class="main-container">
             <main>
-                <div class="tictactoe-container">
-                    
+                <div class="game-ui">
+                    <div class="player-inputs">
+                        <input type="text" id="player1-name" placeholder="Player 1 name">
+                        <input type="text" id="player2-name" placeholder="Player 2 name">
+                        <button id="start-game">Play</button>
+                    </div>
+
+                    <p id="game-status">Enter names and press Play to start</p>
+
+                    <div class="tictactoe-container"></div>
+
+                    <button id="restart-game">Restart</button>
                 </div>
             </main>
         </div>
